@@ -1,3 +1,8 @@
+2009-05-29  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
+
+	* src/generalprefpage.cpp,
+	src/sitepage.cpp: Fix the deprecated GtkAdjustment of GtkSpinButton.
+
 2009-05-28  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
 
 	* src/core/site.cpp: Let vertical and horizontal align center by default.
